# OpticalReadoutTPC

./: .gitignore  CMakeLists.txt  README.md
src/: EventDisplay.C  G4Manager.cc  optPhoton.mac  run_muon.mac  run_point_sources.mac
src/include/: DetectorConfig.hh  G4ActionInitialization.hh  G4DetectorConstruction.hh  G4EventAction.hh  G4PrimaryGeneratorAction.hh  G4RunAction.hh  G4SteppingAction.hh
src/src/: G4ActionInitialization.cc  G4DetectorConstruction.cc  G4EventAction.cc  G4PrimaryGeneratorAction.cc  G4RunAction.cc  G4SteppingAction.cc
